apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__nullability_bubbling.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: response
---
{
  "data": {
    "currentUser": {
      "activeOrganization": null
    }
  },
  "extensions": {
    "formatting": [
      {
        "message": "Cannot return null for non-nullable field Organization.id",
        "path": [
          "currentUser",
          "activeOrganization"
        ]
      }
    ]
  }
}
