apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__nullability_formatting.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: response
---
{
  "data": {
    "currentUser": {
      "activeOrganization": null
    }
  }
}
