apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__query_reconstruction.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: stream.next_response().await.unwrap()
---
{
  "errors": [
    {
      "message": "the router received a query with the @defer directive but the client does not accept multipart/mixed HTTP responses. To enable @defer support, add the HTTP header 'Accept: multipart/mixed; deferSpec=20220824'"
    }
  ]
}
