apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__subscription_with_callback_with_limit-3.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: stream.next_response().await.unwrap()
---
{
  "data": {
    "userWasCreated": null
  },
  "errors": [
    {
      "message": "cannot fetch the name",
      "extensions": {
        "code": "INVALID"
      }
    }
  ]
}
