apollo-router/src/services/snapshots/apollo_router__services__supergraph_service__tests__subscription_without_header.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: res
---
{
  "errors": [
    {
      "message": "the router received a query with a subscription but the client does not accept multipart/mixed HTTP responses. To enable subscription support, add the HTTP header 'Accept: multipart/mixed; boundary=graphql; subscriptionSpec=1.0'",
      "extensions": {
        "code": "SUBSCRIPTION_BAD_HEADER"
      }
    }
  ]
}
